# base_http_client

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _build.yaml  _check.yaml  _publish.yaml  _test.yaml  check.yaml  feature.yaml  publish.yaml  release.yaml  test.yaml
base_http_client/: __init__.py  client.py  exceptions.py  timeout.py
base_http_client/handlers/: base.py  json.py  msgspec.py  pydantic.py
test_http_service/: handlers.py  models.py  responses.py  serialization.py  service.py
